== 0.4.5 / ?

* Major enhancements

  * Improve performance (~2x) on JRuby by supporting Nokogiri
  * Added support for external app servers in selenium mode (basically don't start one) (Mike Gaffney)
  * Added support for uploading files for Merb (Ryan Carver)

* Minor enhancements

  * Added support for field_labeled_locators ending in non word characters
    lh 148 (Zach Dennis)
  * Filled in tests on click link lh 195 (diabolo)
  * Added current_url to selenium session lh 215 (Luke Amdor)
  * Added silence spec to selenium lh 238 (Martin Gamsjaeger aka snusnu)
  * Added ability to configure the browser startup timeout for selenium lh 242 (Mike Gaffney, Mark Dodwell)
  * Added delegation for field_named lh194 (pivotal labs)
  * Added fix to keep from escaping field values in mechanize mode lh256 (jish)
  * Adding fixes for click button/link and made the integration specs pass for the same in selenium lh254 (Ldiehl, Matthias Marschall)
  * Adding clicking link by id in selenium mode lh221 (larrytheliquid)
  * Adding fix for have_selector and have_xpath in descendent blocks lh234 (Thomas Jack)
  * Adding fix for fields with labels with special characters (Thomas Jack, Mike Gaffney, Bryan Hemlkamp)
  * Deprecated current_page lh50 (Mike Gaffney)

* Bug fixes

  * Translate CSS and image paths with single quotes in save_and_open_page (Erin Staniland)
  * Ruby 1.9 compatibility: Avoid calling #to_s on Arrays (Jakub Kuźma)

== 0.4.4 / 2009-04-06

* Major enhancements

  * Make selenium process management code more robust and informative

* Minor enhancements

  * Add support for Rails javascript post links (Mark Menard)
  * Upgrade selenium-client dependency to 1.2.14, and update for new waiting
    API (Balint Erdi)
  * Change default app environment from "selenium" to "test"

* Bug fixes

  * Don't create a new instance of WWW::Mechanize for each request
    (Mark Menard)
  * Select fields with duplicate selected options sent an incorrect value (Noah Davis)
